# ChangeLog for dev-ruby/execjs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/execjs/ChangeLog,v 1.6 2013/01/15 06:32:22 zerochaos Exp $

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> execjs-1.2.13-r1.ebuild,
  execjs-1.4.0.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

*execjs-1.4.0 (29 Jun 2012)

  29 Jun 2012; Hans de Graaff <graaff@gentoo.org> +execjs-1.4.0.ebuild:
  Version bump.

  05 Mar 2012; Thomas Kahle <tomka@gentoo.org> execjs-1.2.13-r1.ebuild:
  marked ~x86 per bug 397435

  01 Mar 2012; Fabian Groffen <grobian@gentoo.org> execjs-1.2.13-r1.ebuild:
  Marked ~x64-macos

*execjs-1.2.13-r1 (25 Jan 2012)

  25 Jan 2012; Diego E. Pettenò <flameeyes@gentoo.org> +execjs-1.2.13-r1.ebuild,
  -execjs-1.2.13.ebuild:
  Fix installation of gemspec to declare the dependency over multi_json
  (compatibility with Bundler).

*execjs-1.2.13 (30 Dec 2011)

  30 Dec 2011; Hans de Graaff <graaff@gentoo.org> +execjs-1.2.13.ebuild,
  +metadata.xml:
  Initial import. Dependency for dev-ruby/uglifier.