@@ -1,26 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST execjs-1.2.13-git.tgz 13576 SHA256 751b9bccd917549b1202d02c5eaa5093dba769c8c3a8d1d881cb6121dd3c63cc SHA512 4e74dccd1aaadbcbbab9be03b28524323c1547704a59cc42877ae71050c61a9d0e81c07bb35b8ff69681e7c1cac3594daeff26e57a65a6b1a9574b08f9876ce9 WHIRLPOOL 8e1824c570fe650940ff030447808703a6dc399a75afb64b852762bf785c3baaf66e409b87ab7384440de8772700e5cb948b93baab2c4dbe7e14cdc02dbb1b06
 DIST execjs-1.4.0-git.tgz 14300 SHA256 76f10e338cfc0e79cb25110db97d6813f6dcce035daa19f66101188607069cfb SHA512 ed41db6f1c95be7bf5b379370c2f06894a0a233aaceeadf45172c0cfa1ab84f4eac7cb91608d02888c35f1dc9355f1fce60a5779535db58066ff1dacab6e0be8 WHIRLPOOL 226db6a8598735ae75ecfb11b2a03f61a75c6f191fe2d3abee3b57c8d76a284d160e3cb7359499ce4af8f9affc88b8d6b8c1499114e8fc28f55271e8266dbfc6
-EBUILD execjs-1.2.13-r1.ebuild 1168 SHA256 506b6b987188ea1bc5cebc1f555b29a93fded4fedab9ee78a5afbc1d55c7d454 SHA512 d84ad675a72cdf378454397f38d4ccd96eae258f7b5fac83638ec95812f2f8f3d7447d470fe5861016fcd35f5581a3fbf04e8224eb0cebcf231f277a9781b377 WHIRLPOOL 7bfa7ed1c25c337c1a436cbd3ec0252fdc466a295820ae07cc9fff09f198e70dbc73db11fd51c7079aae70ec777facf6b6b00c2b2b111a4252681f2633fad157
+DIST execjs-2.0.0.tar.gz 14171 SHA256 94a95a17f6dfad58f18ea1121718aeacc31b2f9a9a2f8708d9bb50ad2ccc10e1 SHA512 6c1ce6293e1684b0d5c570a574803435eaedd7803bf1250feceae301eac35706ae96939914b189bf6a574a32515864c5b5383187c907d307cbb487bb18fbb16b WHIRLPOOL f384fcf35639da228b989f98deed6679e4b4458887faaa1f35b5fb0b6d6531f5a94d1d775cf3eeacc519db164a9669a18d8ab44dc27556d049a75b5ceb1a578b
 EBUILD execjs-1.4.0.ebuild 1159 SHA256 f7093a60bc0d098ffe2c4c1275d48ab96394f0c3a0f7f2d57939d713f437ba25 SHA512 da136b5acc808eda9f78f7c4a1140178f49715863b115ba56b298a2978cccb9e00cae791b6e78d2bc8320d68c2262d0aa9d1b800b76ddb07f2ed0dd39fc427b6 WHIRLPOOL 7d0607e1171760628679d1076dcef2d6468c6b787eb94895b0b10b21660cdc9134a61a2d7007d21dbb1dc75ec00089c1f0629c2cc43d62cb42a1f7144ebb2f30
-MISC ChangeLog 1095 SHA256 fa020a438f171730453fe3964e668cafe6a104324093f1d2962ddd247d6e744b SHA512 a144315fb515cff1263d163b6db3fd01ee64d4320f5029b2bc0b7ed1c175ae3c0b6282c5a5c9039ff451eced5aa54edda716bd5e69015e85379d4932a2f45e2f WHIRLPOOL e25bf6f1fedeb3ab07c70fffe93cebe870ba43b8af23382eced2447040e192894671168380be3b4545b0d4ae8a0304671ff0cbc2d62a317e142f51360c37d8ad
+EBUILD execjs-2.0.0.ebuild 951 SHA256 0c419567a303890bf2ed698cf843e0bc8ddd1e041b8084f2b595c6e3c2e4d755 SHA512 aaa5d65db5596cfa16a913ee7c2db07aec6c7c55766a26311ce1f9146216a76d239a99b49e4b2fbff2295e8b1c3d087018598d5209b43e328d593cca47ada413 WHIRLPOOL acc6f1f4e5d1d7ba8a13d7dafc33003db636a77a679193ae3592ed8d173f96c4e093d12751f5cc0877dc54e83ac669ec362742a04665b133a33bee8cb14b6147
+MISC ChangeLog 1298 SHA256 7f2eebf9ac2adc70a4a3e6f527be633ea5f8a4185d64279e65225cbb3fbb7f84 SHA512 ac4c9db6eb7ba19a2ab59d26abbf46b4baf66c45d41678982b16e33181f907aa70ed535748b428b1ca4a0ee86290db58b6daf89f380622c02729cda03664110d WHIRLPOOL d242818d8b1295e057516ef19ae9a3241d5877e35342c67cf6b3debd86cffa165cc407bf7a69dee6491fdd7cd39d407b90be946575a3ce2789b6d872a08d2dfd
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJQ9Pg5AAoJEKXdFCfdEflKIKIP/RimAgLLvWU7kdJA8EMhLNSs
-bKJHWsMraBg2Cr1C6HtJwXeNdspkLuGx7IT8+P0yWAn0uvlQz2sppIJhJrHt+wkn
-uGvyErnwUT01GI3Ae/aJvDWx2Bl5A5h3IRu26fmbPH46MmRKL0mpah6SIunnj3Dy
-FBV19bZZ8fXSY+nbPoPSuHbBIuyJawUcbeakzTXYOEpWlA8B5tYcv/2ECmXXAXw6
-BQkNGKbBkM45aCCIbCsAfD0N0nxmuNxZCQy941oBuLgsVMc2DFKwTcnHxU5Bregg
-U5mTN1wtQvtMdyXirdBbSpKKwqPD1vibS4JJYY/XPd5k8D5Q24Ie+KQlKUxxT7MZ
-aQ8Q2CFYBIfvIpBk9vTaj50nhisYtgpvVup6qrDlLrgm6ZHqS7nQ/I7FjxjAOX+4
-T7oyUXMlae8TeWDtsKJ4AK6/Jh+0c68zXxURrvzxx85KPy/+NoD/az8nDzBkCqjQ
-qznw2IZPh1lGKOCVrB4bdL3vldpDzmUvKdQBTIPzcTboCN6n/4jQ09SZA7IUMTce
-X3fCWf8x4wx5tJZuxF/LhNGymsYqOfLFTTHic/KSRtikdU1BytigO1eZJucPoIRK
-rSmOQm1zR29wI1/aWYGVXrDLs0bBluqekLpP89VLlgOqGLDx+CixzPOAFcaPByFW
-GmbjklZ6h5HWzGDjIoQ4
-=x843
+iF4EAREIAAYFAlIW/l0ACgkQiIP6VqMIqNdrBgD6ApOzymv591i4Ckvjjfb8dF/4
+9ZCiMlxtMKjyKeyWqgkA/iP6LDFl7JB12xy8P1BuC/5rU9dVKa+obPkhA3YcR43o
+=UHAC
 -----END PGP SIGNATURE-----
