@@ -1,9 +1,9 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/execjs/execjs-1.2.13-r1.ebuild,v 1.4 2013/01/15 06:32:22 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/execjs/execjs-2.0.0.ebuild,v 1.1 2013/08/23 06:17:00 graaff Exp $
 
-EAPI=4
-USE_RUBY="ruby18 ruby19 ree18"
+EAPI=5
+USE_RUBY="ruby18 ruby19 ruby20"
 
 RUBY_FAKEGEM_TASK_DOC=""
 
@@ -13,13 +13,12 @@ RUBY_FAKEGEM_GEMSPEC="${PN}.gemspec"
 
 GITHUB_USER="sstephenson"
 GITHUB_PROJECT="${PN}"
-RUBY_S="${GITHUB_USER}-${GITHUB_PROJECT}-*"
 
 inherit ruby-fakegem
 
 DESCRIPTION="ExecJS lets you run JavaScript code from Ruby"
 HOMEPAGE="https://github.com/sstephenson/execjs"
-SRC_URI="https://github.com/${GITHUB_USER}/${GITHUB_PROJECT}/tarball/v${PV} -> ${P}-git.tgz"
+SRC_URI="https://github.com/${GITHUB_USER}/${GITHUB_PROJECT}/archive/v${PV}.tar.gz -> ${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
@@ -27,15 +26,10 @@ KEYWORDS="~amd64 ~arm ~x86 ~x64-macos"
 
 IUSE="test"
 
-ruby_add_rdepend ">=dev-ruby/multi_json-1.0"
-
 # execjs supports various javascript runtimes. They are listed in order
 # as per the documentation. For now only include the ones already in the
 # tree.
 
-# therubyracer, therubyrhino, johnson, mustang, node.js, spidermonkey
-
-# spidermonkey doesn't pass the test suite:
-# https://github.com/sstephenson/execjs/issues/62
+# therubyracer, therubyrhino, node.js
 
 RDEPEND="${RDEPEND} || ( net-libs/nodejs )"
