@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST uglifier-1.3.0.gem 54272 SHA256 3aa1abee2096968e8b498f30839232a8147e297f03da8e5416c947a018c855c0 SHA512 d79421ecb2590135afa39cfdfe2be22723d3df80f2de602538ed9dd1910e2a311703ceb55d46af795916609b7482c1620fdd673d183451f7e886036f68eda6a1 WHIRLPOOL 34f83b75c850d1c35e8057bb44259d5b0bfccb7a027ab7389becf3294e177e02dc2cfcafb1091cccf91f967c43eb77c69669f8804bff6d1d05978ff2c3fdd137
 DIST uglifier-2.1.1.gem 72192 SHA256 aa0e5301374d3d6ceedfa84c4f53d66fd76a34273408e79160831eea57b05707 SHA512 3584a9d09fd108196f381643c62e4044ed2d324955e8183edb13b2ae3df94a6d375318d4d9e73256a5069deccdb52faa37e1531fe2bc72a5706df1330c5e2374 WHIRLPOOL ad49e9dbf7e0b823e71cb8d1dfc00a95fe8489ac942e27ac94e475b77ee654d5fe0fc5776f1536ed40a3294b8df74586aa3d90f1cc3c82bf7a54d51927932f30
+DIST uglifier-2.1.2.gem 73728 SHA256 88ec5714a4da7fe87598b739d7ee52981253a0494587bf12aa408c9a469949a5 SHA512 0cdb158ac8cd1fd0715dbe555557d7b31eaf2da95cc1b1e24d5a830414518fad63193b8adb585cecc2164f2cbc8adc0a7029522eae19bc5e1c41e365b730ff4e WHIRLPOOL 71d1e646c38d42d58194864fb409a8be7e83ad281b563a0bdf015b461d8c697fe8895c505e599a368b350ffaf57b52ef51fb1f16652e51e44f408e9a4793f4f1
 EBUILD uglifier-1.3.0.ebuild 710 SHA256 5afe37a0a03207dd64bc2bbee5eac4789ff888e9c253b09b38ff5723c9001763 SHA512 d49cd9c9253767b8723445f28a6a0c78e2f0b647b764ba659be7540f14be078e359b617bdd24bebcd8dc3f1240427707a27ba7d7bac44c4bc6ab0c3edc1792e7 WHIRLPOOL 0ec2fdc7ff2c394ad6421f9d33123edc089ca8453b3d04f275796c268b4616a4de4461877b7162c112691c89588ab225b2d6b2b9f463e35e94405b21478a8fd6
 EBUILD uglifier-2.1.1.ebuild 682 SHA256 fa6020b0823855d6360db1922aca0bc4f514fae7682bde6649485344b1c8e974 SHA512 f36c524c88f31ce41ed7e4c9bcbff926bf902eaabba92d1bbf345f0018660458f22763364f651de3d786e8d0bc8a54c2d48aceb2b44c5acf249a9b04807767a5 WHIRLPOOL 18a4ca6634ae8060c598f9ff01bbc23aea3f86c3baf3a5e75745a3a52c25633d150aece99f6088846b7b5c9514bff741f3d5fcce88943793fb2c1466a4edc1ab
-MISC ChangeLog 2642 SHA256 d188298348ddb7f985a94c9a700b4ec12b592714efeb159c5acaa644b58318d5 SHA512 ca210611019aa95715d9246f961d38cc06ec778a2b90851c902b934e757b25806d221ec8ab135cd91e07af48bb3deb36716506febd6d538557a14db039f5f64c WHIRLPOOL 517d858aae6b300bc270f5df2210809d1ef8b51e057fd2ca4d4bf790f89daee6558862bcac95b222d93e731d2c8e9772845706386a2e8266ecd555a69a2ac842
+EBUILD uglifier-2.1.2.ebuild 675 SHA256 46a6dcb3ce2354ecb4ed217d8040432d1138d7b90618bdcb79e81389a320ec80 SHA512 4c2831e81dd6207bbecc7ddd891f7c22b39fffac2faa5e100b5307e7067bec8f4c77455db1efc8aa86a0b7e7b54d662b6f2750f9004544cbd4497798209303e3 WHIRLPOOL a05d5600cbb76bc10de8d7e9639d98942321e28e0743aff913a3f03ae7b17f92fb732875c30f4bfe5676a6cf7544e57dfd806ec80489578769256d27e6fd8750
+MISC ChangeLog 2815 SHA256 61a24a30e65e10235af2b3d7f1c4bb2ccdee34529748df6fb6f1c0cfe7ebc3fb SHA512 cad4fe1ac757df83b7a86b96f8c11a6859ffb486511f7183a2ecc67213491b3b029ca0fc5ba15605c4002d2169d685987ddcfa1999f4d2a052dc5922a9f387fc WHIRLPOOL 2c82a0b49ee2ff5c24bb171aa9aefe55e1a140282165b45f47b25c2994aa643216fa7a1a673d08ec020d0619b26ea840fb75efd0188b94d5601e86e61d80d116
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHm7pcACgkQkKaRLQcq0GJRuwCdErUCYzbmLASw6qLB4t1xxDTF
-aLYAoIia44Ftt/NT8N8j/GR99oBqVLl/
-=J1LE
+iF4EAREIAAYFAlIW/CkACgkQiIP6VqMIqNcYCgD/UnOwRryd2T8iN5IKLPU6TsdC
+eVh+ZoKj747P/NM733gA/iPk3YtRjTLupfoBZ+DZ0Ns+MsZbgxjkA8674PLzPTXv
+=TaI5
 -----END PGP SIGNATURE-----
