@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/execjs-0.3.0[ruby_targets_ruby19] >=dev-ruby/multi_json-1.0.2[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/source_map[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( doc? ( dev-ruby/rdoc[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) )
+DESCRIPTION=Ruby wrapper for UglifyJS JavaScript compressor.
+EAPI=5
+HOMEPAGE=https://github.com/lautis/uglifier
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 doc test test
+KEYWORDS=~amd64 ~arm
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/execjs-0.3.0[ruby_targets_ruby19] >=dev-ruby/multi_json-1.0.2[ruby_targets_ruby19] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 )
+SLOT=0
+SRC_URI=mirror://rubygems/uglifier-2.1.2.gem
+_eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	java-utils-2	52b7cfbf4f7225fcea7e7f18b6d83328	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	6e366daedf25d7020291916549562bbf	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=c1db00b6cbb2e80d658c4738d88cb629
