@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/uglifier
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/uglifier/ChangeLog,v 1.19 2013/07/17 19:15:00 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/uglifier/ChangeLog,v 1.20 2013/08/23 06:07:31 graaff Exp $
+
+*uglifier-2.1.2 (23 Aug 2013)
+
+  23 Aug 2013; Hans de Graaff <graaff@gentoo.org> +uglifier-2.1.2.ebuild:
+  Version bump. Drop ruby18 since upstream dropped support for it.
 
   17 Jul 2013; Markus Meier <maekke@gentoo.org> uglifier-2.1.1.ebuild:
   add ~arm, bug #472892
