@@ -1,6 +1,14 @@
 # ChangeLog for dev-ruby/execjs
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/execjs/ChangeLog,v 1.6 2013/01/15 06:32:22 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/execjs/ChangeLog,v 1.8 2013/08/23 06:17:00 graaff Exp $
+
+*execjs-2.0.0 (23 Aug 2013)
+
+  23 Aug 2013; Hans de Graaff <graaff@gentoo.org> +execjs-2.0.0.ebuild:
+  Version bump.
+
+  23 Aug 2013; Hans de Graaff <graaff@gentoo.org> -execjs-1.2.13-r1.ebuild:
+  Cleanup.
 
   15 Jan 2013; Rick Farina <zerochaos@gentoo.org> execjs-1.2.13-r1.ebuild,
   execjs-1.4.0.ebuild:
